--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-masonry-css": "^1.0.16",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
+    "tailwind": "^4.0.0",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
@@ -44,6 +45,6 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.4.1"
   }
 }
